--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+                "browserTarget": "client-vol:build",
+                "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "client-vol:build:production"
