--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "ansi-html-community": "^0.0.8",
     "bootstrap": "^3.3.7",
-    "keycloak-angular": "^9.0.0",
-    "keycloak-js": "^16.1.0",
+    "keycloak-angular": "^8.4.0",
+    "keycloak-js": "^15.1.0",
     "rxjs": "~6.6.0",
+    "strip-ansi": "^6.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
